--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .venv/
 env.py
 __pycache__/
+
+[submodule "django-project"]
+    path = django-project
+    url = https://github.com/Kassem79/django-project.git
