--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.11.1
-dj-database-url==0.5.0
+dj-database-url==3.1.2
 Django==4.2.28
 gunicorn==20.1.0
 psycopg2==2.9.9
@@ -7,3 +7,4 @@ psycopg2-binary==2.9.9
 setuptools==82.0.0
 sqlparse==0.5.5
 tzdata==2025.3
+whitenoise==6.5.0
